src/objects/MUSW__File__c.object
<CustomObject>
    <description>Wrapper for attachments whether system generated or images</description>
    <fields>
        <fullName>MUSW__Attachment__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390)) &amp; MUSW__ObjectId__c , &quot;Link to Attachment&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__LastPrintedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Printed Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ObjectId__c</fullName>
        <description>currently only attachment id&apos;s</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__OwnerName__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ParentName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__SysGen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SysGen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Letter Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>File</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>